@@ -1,3 +1,5 @@
+  * test_700 auto tests now working as test_702 for ACMEv2
+  * test_600 roundtrip tests now working as test_602 for ACMEv2
   * test_500 drive tests now working as test_502 for ACMEv2
   * More test cases regarding ACMEv2 account handling.
   * Removed "id" field from ACME accounts as redundant. Internal cleanup of account handling.
